Fix syntax highliting overflow bug

--- a/prism-override.css
+++ b/prism-override.css
@@ -1,8 +1,14 @@
+code[class*="language-"],
+pre[class*="language-"]{
+  color: #e5e5e5;
+  margin-top: 0;
+}
+
 .gatsby-highlight {
   background-color: #282c34;
   border-radius: 0.3rem;
   margin: 0 0 1.45rem 0;
-  overflow: auto;
+  /* overflow: auto; */
   font-size: 1.1rem;
 }
 
@@ -17,8 +23,11 @@
   margin-left: -1em;
   padding-right: 1em;
   padding-left: 0.75em;
-  /* border-left: 0.25em solid #f99; */
 }
+
+
+
+
 
 .codeTitle{
   font-size: 1.1rem;
